--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8" />
-<title>Nature of Code</title>
+<title>Sudoku</title>
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"/>
 <link rel="stylesheet" media="not screen and (device-width: 1200px) and (device-height: 900px)"
 	href="lib/sugar-web/graphics/css/sugar-96dpi.css">
@@ -76,7 +76,7 @@
 		</div>
 
 		<!--solve buttons-->
-		Solve: <button type="button" class="js-solve-step-btn">One Step</button><button type="button" class="js-solve-all-btn">All</button>
+		Solve: <button type="button" class="js-solve-step-btn">One Step</button><button type="button" class="js-solve-all-btn">All</button>+++++==++++++++
 		<!--clear board btn-->
 		<button style="float:right;"type="button" class="js-clear-board-btn">Clear Board</button>
 		<br>
